--- a/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
@@ -219,6 +219,10 @@ Finally, this example test fills in all the data and submits the form:
 
 Helper functions make the correct Enzyme calls to fill in data, so there isn't a lot of repeated code. The helpers are documented in the `schemaform-utils.jsx` file. The helpers fill in data and then check that the right number of inputs appear on the page after that change. Some of the tests also directly test logic in `depends` functions on the page configuration. 
 
+## Run a unit test
+
+See [Run tests](/getting-started/common-tasks/test) for information about running a unit test.
+
 ## Other utilities
 
 These utilities can be found in `platform/testing/unit/helpers.js`:
