--- a/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
@@ -221,7 +221,7 @@ Helper functions make the correct Enzyme calls to fill in data, so there isn't a
 
 ## Run a unit test
 
-See [Run tests](/getting-started/common-tasks/test) for information about running a unit test.
+See [Run tests](/getting-started/common-tasks/test) for information about how to run a unit test.
 
 ## Other utilities
 
