--- a/packages/documentation/src/pages/getting-started/common-tasks/test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/test.mdx
@@ -5,9 +5,11 @@ tags: unit test, lint, end to end test, accessibility, 508
 
 # Run tests
 
+You'll need to run the following types of tests when building on VA.gov.
+
 ## Prerequisite
 
-- [Run or build](/getting-started/common-tasks/run-build) the app
+- [Run or build](/getting-started/common-tasks/run-build) the application.
 
 ## Test commands
 
@@ -20,33 +22,32 @@ tags: unit test, lint, end to end test, accessibility, 508
 
 ## Requires local build or run
 
-Some tests require [running or building](/getting-started/common-tasks/run-build)
-VA.gov:
-- **testing while running `watch` task**: tests will automatically be run against the site running on that server
-- **testing with a local build**: if nothing is running at `http://localhost:3001`, tests start an Express server and serve the build output in `build/localhost`
+Some tests require [running or building](/getting-started/common-tasks/run-build) VA.gov:
+- **Testing while running `watch` task**: Tests will automatically be run against the site running on that server.
+- **Testing with a local build**: If nothing is running at `http://localhost:3001`, tests start an Express server and serve the build output in `build/localhost`.
 
 ## Unit tests
 
-- run all of our [Mocha](https://mochajs.org/)/[Chai](http://chaijs.com/)/[Sinon](https://sinonjs.org/)-based unit tests with the file extension `.unit.spec.js(x)`
-- use [JSDom](https://github.com/jsdom/jsdom) and [Enzyme](https://airbnb.io/enzyme/) to test browser and React behavior
-- are located in `test/` directories near the code they're testing in `src/`
+- Run all [Mocha](https://mochajs.org/)/[Chai](http://chaijs.com/)/[Sinon](https://sinonjs.org/)-based unit tests with the file extension `.unit.spec.js(x)`
+- Use [JSDom](https://github.com/jsdom/jsdom) and [Enzyme](https://airbnb.io/enzyme/) to test browser and React behavior
+- Are located in `test/` directories near the code they're testing in `src/`
 
 ## Linting
 
-- verify consistency of JavaScript
-- enforce code formatting rules
-- automatically run on `git commit` as a precommit hook
+- Verify consistency of JavaScript
+- Enforce code formatting rules
+- Automatically run on `git commit` as a precommit hook
 
-_We strongly recommend that you set up your editor to show you ESLint errors automatically as you're writing code. This makes the linter far less annoying in day to day use. ESLint has [integrations](https://eslint.org/docs/user-guide/integrations) for nearly all popular editors._
+Set up your editor to show ESLint errors automatically as you're writing code. This makes the linter far less annoying in day to day use. ESLint has [integrations](https://eslint.org/docs/user-guide/integrations) for nearly all popular editors.
 
 ## End to end tests
 
-- run all of our [Nightwatch.js](http://nightwatchjs.org/) tests in headless Chrome with the file extension `.e2e.spec.js`
-- simulate an actual user completing tasks in our tools and services.
-- are located in `test/` directories near the application they're testing in `src/`
+- Run all [Nightwatch.js](http://nightwatchjs.org/) tests in headless Chrome with the file extension `.e2e.spec.js`
+- Simulate an actual user completing tasks in the tools and services
+- Are located in `test/` directories near the application they're testing in `src/`
 
-_End to end tests will only pass if they are run against their mock api server. This server is started by the end to end test automatically when vets-api is **not** running_
+End to end tests will only pass if they are run against their mock API server. This server is started by the end to end test automatically when vets-api is **not** running.
 
 ## Accessibility tests
 
-- a variation of e2e tests that run aXe against our content pages running in Chrome.
+- A variation of e2e tests that run aXe against the content pages running in Chrome.
