--- a/packages/documentation/src/pages/platform/unit-testing.mdx
+++ b/packages/documentation/src/pages/platform/unit-testing.mdx
@@ -2,17 +2,15 @@
 
 All new code that is added to `vets-website` should be unit tested. Write unit tests as you build to make sure your form (or other component) is behaving as you expect and to help guard against future bugs. Your test files should go in a `tests` folder in your application folder.
 
-## How do unit tests work?
-
 **File format:** *file_name*.unit.spec.js
 
 **Where:** Any *file_name*.unit.spec.js file located in the `/src` folder. This file is usually located in a directory close to the code being tested.
 
-**When**: Run the test locally through npm script commands, during the Jenkins build (Unit), and after merging to master. See [Run tests](/getting-started/common-tasks/new-unit-test) for more information.
+**When:** [Run the test](/getting-started/common-tasks/test) locally through npm script commands, during the Jenkins build (Unit), and after merging to master.
 
-**How**: See [Write a unit test](/getting-started/common-tasks/new-unit-test) for more information.
+**How:** See [Write a unit test](/getting-started/common-tasks/new-unit-test) for more information.
 
-**Libraries used**:
+**Libraries used:**
 
 - [mocha.js](https://mochajs.org/): Test framework.
 - [chai.js](https://www.chaijs.com/): BDD / TDD assertion library.
