--- a/packages/documentation/src/pages/platform/unit-testing.mdx
+++ b/packages/documentation/src/pages/platform/unit-testing.mdx
@@ -1,14 +1,14 @@
 # Unit testing
 
-All new code that is added to `vets-website` should be unit tested. Write unit tests as you build to make sure your form (or other component) is behaving as you expect and to help guard against future bugs. Your test files should go in a `tests` folder in your application folder.
+All new code that is added to `vets-website` should be unit tested. Write unit tests as you build to make sure your form (or other component) is behaving as you expect and to help guard against future bugs.
 
 **File format:** *file_name*.unit.spec.js
 
-**Where:** Any *file_name*.unit.spec.js file located in the `/src` folder. This file is usually located in a directory close to the code being tested.
+**Where:** Any *file_name*.unit.spec.js file located in the `/src` folder. This file is usually located in a test directory close to the code being tested.
 
 **When:** [Run the test](/getting-started/common-tasks/test) locally through npm script commands, during the Jenkins build (Unit), and after merging to master.
 
-**How:** See [Write a unit test](/getting-started/common-tasks/new-unit-test) for more information.
+**How:** [Write a unit test.](/getting-started/common-tasks/new-unit-test)
 
 **Libraries used:**
 
