--- a/packages/documentation/src/pages/getting-started/common-tasks/test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/test.mdx
@@ -1,11 +1,11 @@
 ---
-title: Run tests
+title: Running tests
 tags: unit test, lint, end to end test, accessibility, 508
 ---
 
-# Run tests
+# Running tests
 
-You'll need to run the following types of tests when building on VA.gov.
+You can run the following types of tests when building on VA.gov.
 
 ## Prerequisite
 
