--- a/packages/documentation/src/pages/getting-started/common-tasks/new-end-to-end-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-end-to-end-test.mdx
@@ -1,9 +1,9 @@
 ---
-title: Write an end-to-end test
+title: Writing an end-to-end test
 tags: Nightwatch, mockapi, e2e, axe
 ---
 
-# Write an end-to-end test
+# Writing an end-to-end test
 
 Front end engineers use end-to-end (e2e) tests in `vets-website` to validate multipage applications with client-side routing. They are primarily used to assert that:
 - client applications render their inputs
